--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -28,7 +28,8 @@
                     <div class="img2">
                         <img src="https://img.icons8.com/external-nawicon-glyph-nawicon/64/000000/external-email-communication-nawicon-glyph-nawicon.png" />
                     </div>
-                    <input id="password" type="password" name="Password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$!%*?&])[A-Za-z\d$!%*?&]{6,}$"
+                    <input id="password" type="password" name="Password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*[A-Z]){6,}$"
+                    @*<input id="password" type="password" name="Password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$!%*?&])[A-Za-z\d$!%*?&]{6,}$"*@
                            title="Must contain at least one number and one uppercase letter and one special character,minimum 6 characters" required >
                     <input id="confpassword" type="password" name="ConfirmPassword" placeholder="Confirm password" minlength="6"  >
                     <div class="img4">
