--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -14,7 +14,7 @@
                 @Html.AntiForgeryToken()
 
                 <div class="inputBx">
-                    <input id="in" type="text" name="FirstName" required placeholder="FirstName">
+                    <input id="in" type="text" name="FirstName" required placeholder="First Name">
                     <input id="in" type="text" name="LastName" required placeholder="Last Name">
                 </div>
                 <div class="img1">
@@ -39,7 +39,7 @@
                         <input id="sub" type="submit" value="Register">
                     </div>
                     <div class="inputBx">
-                        <p>ALLRADY HAVE AN ACCOUNT?<a onclick="signinToggle()" href="#">Sign in</a></p>
+                        <p>ALREADY HAVE AN ACCOUNT? <a onclick="signinToggle()" href="#">Sign in</a></p>
                     </div>
                 </div>
             </form>
@@ -69,8 +69,8 @@
                     <input id="sub" type="submit" value="Login">
                 </div>
                 <div class="inputBx">
-                    <p>Forget<a href="#">Password</a></p>
-                    <p>Dont have an account?<a onclick="registerToggle()" href="#">Sign up</a></p>
+                    <p>Forgot your <a href="#">Password?</a></p>
+                    <p>You don't have an account?  <a onclick="registerToggle()" href="#">Sign up</a></p>
                 </div>
             </form>
             <p>Login with social media</p>
