--- a/CommunityKitchen/Views/Home/Index.cshtml
+++ b/CommunityKitchen/Views/Home/Index.cshtml
@@ -16,8 +16,7 @@
             <ul>
 
                 <li data-transition="fade">
-                    <img src="~/Assets/images/missions/zmp.jpg" alt="" width="1920" height="882" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
-
+                    <img src="~/Assets/images/missions/Love-people-1680x768.jpg" alt="" width="1920" height="882" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                     <div class="tp-caption tp-resizeme"
                          data-x="center" data-hoffset=""
@@ -31,9 +30,9 @@
                          data-responsive_offset="on"
                          data-start="500">
                         <div class="slide-content-box center">
-                            <h4>Thousand of children are waiting for help!</h4>
+                            <h4>Thousands of people could use your help!</h4>
                             <h1><span>help</span> those in <span>need</span></h1>
-                            <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque la<br>udantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
+                            <p>It's the first step to realise you can help<br>the next one is, just DO ET </p>
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme"
@@ -50,7 +49,7 @@
                             <div class="button">
                                 @if (!User.Identity.IsAuthenticated)
                                 {
-                                    <a class="thm-btn" onclick="signupToggle()" href="#">join with us today</a>
+                                    <a class="thm-btn" onclick="signupToggle()" href="#">join us today</a>
                                 }
                             </div>
                         </div>
@@ -59,8 +58,7 @@
                 </li>
 
                 <li data-transition="fade">
-                    <img src="~/Assets/images/missions/zmp.jpg" alt="" width="1920" height="882" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
-
+                    <img src="~/Assets/images/missions/Love-people-1680x768.jpg" alt="" width="1920" height="882" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
 
                     <div class="tp-caption tp-resizeme"
                          data-x="center" data-hoffset=""
@@ -74,7 +72,7 @@
                          data-responsive_offset="on"
                          data-start="500">
                         <div class="slide-content-box center">
-                            <h4>Thousand of children are waiting for help!</h4>
+                            <h4>Thousands of people are waiting for help!</h4>
                             <h1>help those in <span>need</span></h1>
                             <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque la<br>udantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
                         </div>
@@ -91,7 +89,7 @@
                          data-start="1500">
                         <div class="slide-content-box">
                             <div class="button">
-                                <a class="thm-btn" href="#">join with us today</a>
+                                <a class="thm-btn" href="#">join us today</a>
                             </div>
                         </div>
                     </div>
@@ -254,7 +252,7 @@
 
 
     <!--start parallax-sec-one-->
-    <section class="parallax-sec-one">
+    @*<section class="parallax-sec-one">
         <div class="container">
             <div class="section-title">
                 <h1>we help many people</h1>
@@ -265,7 +263,7 @@
             </div>
             <div class="link"><a href="single-cause.html" class="thm-btn">Apply now</a></div>
         </div>
-    </section>
+    </section>*@
     <!--end parallax-sec-one-->
 
 </body>
