--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -31,7 +31,7 @@
                     </li>
 
 
-                    @if (admin == "Admin" || admin == "admin")
+                    @if (user == "Admin" || user == "admin")
                     {
                         <li class="dropdown">
                             @Html.ActionLink("Organizer", "Index", "Item")
