--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -75,13 +75,14 @@
                                     @if (eve.Description.Length > 1500)
                                     {
                                         <div class="flex-container">
-                                            <div style="overflow: auto; scrollbar-face-color:brown; scrollbar-base-color:white; width: 768px; height: 400px; background-color: #f5e5d0; ">@eve.Description</div>
+
+                                            <div style="border-radius: 6px; margin: 5px; padding: 10px; overflow: auto; width: 795px; height: 400px; color: white; background-color: #808080; ">@eve.Description</div>
                                         </div>
                                     }
                                     else
                                     {
                                         <div class="flex-container">
-                                            <div style=" width: 768px; height: auto; background-color: #f5e5d0; ">@eve.Description</div>
+                                            <div style=" border-radius: 6px; margin: 5px; padding: 10px; width: 768px; height: auto; color: white; background-color: #808080; ">@eve.Description</div>
                                         </div>
                                     }
 
