--- a/CommunityKitchen/Views/Shared/Components/_Header.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Header.cshtml
@@ -4,7 +4,7 @@
             <div class="column left">
                 <ul class="top-bar-text">
                     <li><i class="icon fa fa-envelope"></i>charitysympathy@info.com</li>
-                    <li><i class="icon fa fa-phone"></i>012.9355.121</li>
+                    <li><i class="icon fa fa-phone"></i>+30 010 990 0000</li>
                 </ul>
             </div>
             <div class="column center">
