--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewBag.Title = "_NavBar";
     var user = User.Identity.Name;
-    var role = User.IsInRole("SuperAdmin") || User.IsInRole("Admin");
+    var roleAdmin = User.IsInRole("SuperAdmin") || User.IsInRole("Admin");
+    var roleDonor = User.IsInRole("Donor") || User.IsInRole("SuperAdmin") || User.IsInRole("Admin");
 }
 <div class="text-justify col-md-7 d-flex menu-column">
     <nav class="main-menu navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
@@ -23,7 +24,10 @@
                             @Html.ActionLink("Home", "Index", "Home")
 
                             <ul>
+                                @if (roleDonor)
+                                {
                                <li><a href="http://localhost:4200/">Archive</a></li>
+                                }
                                 <li>@Html.ActionLink("Stories", "StoriesIndex", "Story")</li>
                                 <li>@Html.ActionLink("Support A Cause", "CauseIndex", "Cause")</li>
                                 <li>@Html.ActionLink("Upcoming Events", "EventsIndex", "Event")</li>
@@ -31,7 +35,7 @@
                         </li>
                     
                     
-                    @if (role)
+                    @if (roleAdmin)
                     {
                         <li class="dropdown">
                             @Html.ActionLink("Organizer", "Index", "Item")
