--- a/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
@@ -265,7 +265,7 @@
               class="closemodal">&times;</span>
         <h5>Thank You!</h5>
         <div class="modalcontainer">
-            <p>Your message has been sent successfully.</p>
+            <p>Your message has been successfully sent.</p>
         </div>
     </div>
 </div>
