--- a/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
@@ -263,7 +263,7 @@
     <div class="animatedtop">
         <span onclick="document.getElementById('id01').style.display='none'"
               class="closemodal">&times;</span>
-        <h5>Thank You!</h5>
+        <h5 style="text-align:center">Thank You!</h5>
         <div class="modalcontainer">
             <p>Your message has been successfully sent.</p>
         </div>
