--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -159,6 +159,7 @@ input, textarea {
     width: 100%;
     background: #fff;
     overflow-x: hidden;
+    padding-bottom:10px;
 }
 
 .clear_fix {
@@ -523,7 +524,8 @@ input, textarea {
             color: #272727;
             font-size: 11px;
             font-weight: 400;
-            margin-right: 20px;
+            margin-right: 30px;
+            margin-bottom:10px;
             display: inline-block;
             position: relative;
             font-family: 'Open Sans', sans-serif;
