--- a/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
+++ b/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
@@ -60,7 +60,7 @@
                             else
                             {
                                 <div class="p-3">
-                                    <img style="border-radius: 15px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Defortwse re mLKAIA Text" />
+                                    <img style="border-radius: 15px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Image couldn't render" />
                                 </div>
                             }
 
