--- a/CommunityKitchen/Views/Event/EventDetails.cshtml
+++ b/CommunityKitchen/Views/Event/EventDetails.cshtml
@@ -14,7 +14,7 @@
 
             <hr />
             <div style="display: flex; justify-content: center;overflow: hidden;">
-                <img style="border-radius: 100px; height: 200px; width: 800px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@Model.Photo" />
+                <img id="imgEventDetails" style="border-radius: 100px; height: 200px; width: 800px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@Model.Photo" />
             </div>
             <div class="title">
                 <h2>@Model.Title</h2>
