--- a/CommunityKitchen/Views/Event/EventDetails.cshtml
+++ b/CommunityKitchen/Views/Event/EventDetails.cshtml
@@ -32,7 +32,7 @@
 
             <div>
                 <div>
-                    @Html.ActionLink("Back to List", "OrganizeEvents", "", new {@class= "thm-btn style-1" })
+                    <a class="thm-btn style-1" href="javascript:history.go(-1)"> Back to List </a>
                 </div>
             </div>
 
