images on causes

--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -68,7 +68,7 @@
                                         <div class="item">
                                             <div class="bg-area">
                                                 <div class="image-box">
-                                                    <img src="images/causes/1.jpg" alt="Awesome Image" />
+                                                    <img style="max-height: 240px; max-width: 360px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@cause.Photo" alt="No Image found" />
                                                     <div class="overlay">
                                                         <div class="box">
                                                             <div class="content">
