--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -51,7 +51,7 @@
                                         else
                                         {
                                             <div>
-                                                <img style="border-radius: 50px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Defortwse re mLKAIA Text" />
+                                                <img style="border-radius: 50px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Can not load image" />
                                             </div>
                                         }
 
