--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -159,7 +159,8 @@ input, textarea {
     width: 100%;
     background: #fff;
     overflow-x: hidden;
-    padding-bottom:10px;
+    padding-top:10px;
+    padding-bottom:5px;
 }
 
 .clear_fix {
