--- a/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
@@ -54,7 +54,7 @@
 
                 <p>
                     CHARITY  SYMPATHY
-                    <hr /> ~ Non Profit Commutiny ~
+                    <hr /> ~ Non Profit Community ~
                 </p>
             </div>
 
