--- a/CommunityKitchen/Views/Shared/Components/_Header.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="boxed_wrapper">
+﻿<div class="boxed_wrapper" style="padding-top:10px; padding-bottom:5px;">
     <header class="top-bar">
         <div class="container">
             <div class="column left">
